fix splash screen logo not showing

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -25,7 +25,6 @@
 
 .logo {
   height: 350px;
-  width: 200px;
 }
 
 .logo img {
